# autoencoders

./: .gitignore  README.md  autoencoder.ipynb  pyproject.toml
encoders/: cnn_autoencoder.ipynb
vae/: vae.ipynb
